# LiLiKin

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DualNumber.h  DualNumber_double.cpp  README.md  RobotAlgebra.h  RobotAlgebraTypes.cpp  RobotAlgebraTypes.h  dual_number.h  example.cpp  main.cpp  math.cpp  math.h
.github/workflows/: cmake.yml
CMakeModules/: CodeCoverage.cmake
applications/: example.cpp
doc/raw/: use_case.puml
include/: ccc.h  dual_embedded_matrix.h  dual_frame.h  dual_number.h  dual_skew.h  dual_skew_product.h  lilikin.h  matrix3.h  random.h  screw.h  trigonometry_helper.h  types.h  unit_line.h  vector.h
include/base/: dual_number.h  matrix3.h  vector.h
include/embedded_types/: dual_embedded_matrix.h  dual_frame.h  dual_skew.h  dual_skew_product.h
include/screws/: line.h  screw.h  unit_line.h  unit_screw.h
include/types/: homogenous.h  matrix3.h  matrix6.h  pluecker.h
include/util/: precision.h  random.h
specific/: DualNumber.cpp  DualNumber.h  DualVector.cpp  DualVector.h  MatDefinitions.h  RobotAlgebra.cpp  RobotAlgebra.h  main.cpp
src/: ccc.cpp  dual_number.cpp  main.cpp  trigonometry_helper.cpp
src/base/: dual_number.cpp  matrix3.cpp  vector.cpp
src/embedded_types/: dual_embedded_matrix.cpp  dual_frame.cpp  dual_skew.cpp  dual_skew_product.cpp
src/screws/: line.cpp  screw.cpp  screw_cos3.cpp  unit_line.cpp  unit_screw.cpp
src/types/: homogenous.cpp  matrix3.cpp  matrix6.cpp  pluecker.cpp  vector.cpp
src/util/: random.cpp
test/: acos3_test.cpp  ccc_test.cpp  dual_number_test.cpp  random_test.cpp  screws_test.cpp
